VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef unsigned long IDOBJ;      // identifier of VeCAD object

void    CADAPI CadPlinePutZ1      (VHANDLE hEnt, double Z);

double  CADAPI CadPlineGetRadius  (VHANDLE hEnt);

void    CADAPI CadPlinePutRadius  (VHANDLE hEnt, double Rad);

double  CADAPI CadPlineGetWidth   (VHANDLE hEnt);

void    CADAPI CadPlinePutWidth   (VHANDLE hEnt, double Width);

BOOL    CADAPI CadPlineGetClosed  (VHANDLE hEnt);

void    CADAPI CadPlinePutClosed  (VHANDLE hEnt, BOOL bClosed);

int     CADAPI CadPlineGetFit     (VHANDLE hEnt);

void    CADAPI CadPlinePutFit     (VHANDLE hEnt, int FitType);

void    CADAPI CadPlineGetStartTan(VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadPlinePutStartTan(VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadPlineGetEndTan  (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadPlinePutEndTan  (VHANDLE hEnt, double X, double Y, double Z);

double  CADAPI CadPlineGetLength  (VHANDLE hEnt);

double  CADAPI CadPlineGetArea    (VHANDLE hEnt);

BOOL    CADAPI CadPlineContainPoint (VHANDLE hEnt, double X, double Y);


/******************************************************************************
* RECTANGLE
*******************************************************************************/
VHANDLE CADAPI CadAddRect       (VDWG hDwg, double X, double Y, double Z, double Width, double Height, double Angle);

void    CADAPI CadRectGetCenter (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadRectPutCenter (VHANDLE hEnt, double X, double Y, double Z);

double  CADAPI CadRectGetWidth  (VHANDLE hEnt);

void    CADAPI CadRectPutWidth  (VHANDLE hEnt, double Width);

double  CADAPI CadRectGetHeight (VHANDLE hEnt);

void    CADAPI CadRectPutHeight (VHANDLE hEnt, double Height);

double  CADAPI CadRectGetAngle  (VHANDLE hEnt);

void    CADAPI CadRectPutAngle  (VHANDLE hEnt, double Angle);

double  CADAPI CadRectGetRadius (VHANDLE hEnt);

void    CADAPI CadRectPutRadius (VHANDLE hEnt, double Radius);



/******************************************************************************
* MULTILINE
*******************************************************************************/
VHANDLE CADAPI CadAddMline        (VDWG hDwg, BOOL bClosed);

BOOL    CADAPI CadMlineInsertVer  (VHANDLE hEnt, UINT iVer);

BOOL    CADAPI CadMlineDeleteVer  (VHANDLE hEnt, UINT iVer);

UINT    CADAPI CadMlineGetNumVers (VHANDLE hEnt);

void    CADAPI CadMlinePutNumVers (VHANDLE hEnt, UINT nVers);

void    CADAPI CadMlineGetVer     (VHANDLE hEnt, UINT iVer, double* pX, double* pY, double* pZ);

void    CADAPI CadMlinePutVer     (VHANDLE hEnt, UINT iVer, double X, double Y, double Z);

void    CADAPI CadMlinePutZ1      (VHANDLE hEnt, double Z);

BOOL    CADAPI CadMlineGetClosed  (VHANDLE hEnt);

void    CADAPI CadMlinePutClosed  (VHANDLE hEnt, BOOL bClosed);

void    CADAPI CadMlinePutScale   (VHANDLE hEnt, double Scal);

double  CADAPI CadMlineGetScale   (VHANDLE hEnt);

void    CADAPI CadMlinePutJust    (VHANDLE hEnt, int Just);

int     CADAPI CadMlineGetJust    (VHANDLE hEnt);

double  CADAPI CadMlineGetLength  (VHANDLE hEnt);

IDOBJ   CADAPI CadMlineGetStyleID (VHANDLE hEnt);

void    CADAPI CadMlinePutStyleID (VHANDLE hEnt, IDOBJ Id);



/******************************************************************************
* TEXT
*******************************************************************************/
int     CADAPI CadSetTextAlign     (VDWG hDwg, int Align);

double  CADAPI CadSetTextHeight    (VDWG hDwg, double Height);

double  CADAPI CadSetTextWidth     (VDWG hDwg, double Width);

double  CADAPI CadSetTextRotAngle  (VDWG hDwg, double Angle);

double  CADAPI CadSetTextOblique   (VDWG hDwg, double Angle);

BOOL    CADAPI CadSetTextUpsideDown(VDWG hDwg, BOOL bUpDown);

BOOL    CADAPI CadSetTextBackward  (VDWG hDwg, BOOL bBack);

VHANDLE CADAPI CadAddText          (VDWG hDwg, LPCTSTR szText, double X, double Y, double Z);

VHANDLE CADAPI CadAddText2         (VDWG hDwg, LPCTSTR szText, double X, double Y, double Z, int Align, double H, double W, double RotAngle, double Oblique);

IDOBJ   CADAPI CadTextGetStyleID   (VHANDLE hEnt);

void    CADAPI CadTextPutStyleID   (VHANDLE hEnt, IDOBJ Id);

double  CADAPI CadTextGetX         (VHANDLE hEnt);

void    CADAPI CadTextPutX         (VHANDLE hEnt, double X);

double  CADAPI CadTextGetY         (VHANDLE hEnt);

void    CADAPI CadTextPutY         (VHANDLE hEnt, double Y);

double  CADAPI CadTextGetZ         (VHANDLE hEnt);

void    CADAPI CadTextPutZ         (VHANDLE hEnt, double Z);

void    CADAPI CadTextGetPoint     (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadTextPutPoint     (VHANDLE hEnt, double X, double Y, double Z);

UINT    CADAPI CadTextGetLen       (VHANDLE hEnt);

void    CADAPI CadTextGetText      (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadTextPutText      (VHANDLE hEnt, LPCTSTR szText);

double  CADAPI CadTextGetAngle     (VHANDLE hEnt);

void    CADAPI CadTextPutAngle     (VHANDLE hEnt, double Angle);

double  CADAPI CadTextGetHeight    (VHANDLE hEnt);

void    CADAPI CadTextPutHeight    (VHANDLE hEnt, double Height);

double  CADAPI CadTextGetWidth     (VHANDLE hEnt);

void    CADAPI CadTextPutWidth     (VHANDLE hEnt, double Width);

double  CADAPI CadTextGetOblique   (VHANDLE hEnt);

void    CADAPI CadTextPutOblique   (VHANDLE hEnt, double Angle);

int     CADAPI CadTextGetAlign     (VHANDLE hEnt);

void    CADAPI CadTextPutAlign     (VHANDLE hEnt, int Align);

BOOL    CADAPI CadTextGetBackward  (VHANDLE hEnt);

void    CADAPI CadTextPutBackward  (VHANDLE hEnt, BOOL bBackward);

BOOL    CADAPI CadTextGetUpsideDown(VHANDLE hEnt);

void    CADAPI CadTextPutUpsideDown(VHANDLE hEnt, BOOL bUpsideDown);

double  CADAPI CadTextGetBoxWidth  (VHANDLE hEnt);

void    CADAPI CadTextGetPoint0    (VHANDLE hEnt, double* pX, double* pY, double* pZ);



/******************************************************************************
* MULTILINE TEXT
*******************************************************************************/
VHANDLE CADAPI CadAddMText          (VDWG hDwg, LPCTSTR szText, double RectWidth, double X, double Y, double Z, int Align, double RotAngle);

IDOBJ   CADAPI CadMTextGetStyleID   (VHANDLE hEnt);

void    CADAPI CadMTextPutStyleID   (VHANDLE hEnt, IDOBJ Id);

void    CADAPI CadMTextGetPoint     (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadMTextPutPoint     (VHANDLE hEnt, double X, double Y, double Z);

UINT    CADAPI CadMTextGetLen       (VHANDLE hEnt);

void    CADAPI CadMTextGetText      (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadMTextPutText      (VHANDLE hEnt, LPCTSTR szText);

double  CADAPI CadMTextGetRectWidth (VHANDLE hEnt);

void    CADAPI CadMTextPutRectWidth (VHANDLE hEnt, double RectWidth);

int     CADAPI CadMTextGetAlign     (VHANDLE hEnt);

void    CADAPI CadMTextPutAlign     (VHANDLE hEnt, int Align);

double  CADAPI CadMTextGetHeight    (VHANDLE hEnt);

void    CADAPI CadMTextPutHeight    (VHANDLE hEnt, double Height);

double  CADAPI CadMTextGetAngle     (VHANDLE hEnt);

void    CADAPI CadMTextPutAngle     (VHANDLE hEnt, double Angle);

double  CADAPI CadMTextGetWidth     (VHANDLE hEnt);

void    CADAPI CadMTextPutWidth     (VHANDLE hEnt, double Width);

double  CADAPI CadMTextGetLineSpace (VHANDLE hEnt);

void    CADAPI CadMTextPutLineSpace (VHANDLE hEnt, double LineSpace);

double  CADAPI CadMTextGetAW        (VHANDLE hEnt);

double  CADAPI CadMTextGetAH        (VHANDLE hEnt);




/******************************************************************************
* BLOCK INSERTION
*******************************************************************************/
VHANDLE CADAPI CadAddInsBlock        (VDWG hDwg, IDOBJ idBlock, double X, double Y, double Z, double Scal, double Angle);

VHANDLE CADAPI CadAddInsBlockM       (VDWG hDwg, IDOBJ idBlock, double X, double Y, double Z, double Scal, double Angle, int NumCols, int NumRows, double ColDist, double RowDist);

IDOBJ   CADAPI CadInsBlockGetBlockID (VHANDLE hEnt);

void    CADAPI CadInsBlockPutBlockID (VHANDLE hEnt, IDOBJ Id);

double  CADAPI CadInsBlockGetX       (VHANDLE hEnt);