VS2005/Common/VeCADAPI/CadApi.bas

Public Declare Sub      CadPlinePutZ1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Function CadPlineGetRadius Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPlinePutRadius Lib "vecad.dll" (ByVal hEnt As Long, ByVal Rad As Double)
Public Declare Function CadPlineGetWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPlinePutWidth Lib "vecad.dll" (ByVal hEnt As Long, ByVal Width As Double)
Public Declare Function CadPlineGetClosed Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadPlinePutClosed Lib "vecad.dll" (ByVal hEnt As Long, ByVal bClosed As Long)
Public Declare Function CadPlineGetFit Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadPlinePutFit Lib "vecad.dll" (ByVal hEnt As Long, ByVal FitType As Long)
Public Declare Sub      CadPlineGetStartTan Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadPlinePutStartTan Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadPlineGetEndTan Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadPlinePutEndTan Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadPlineGetLength Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadPlineGetArea Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadPlineContainPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function CadAddRect Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Width As Double, ByVal Height As Double, ByVal Angle As Double) As Long
Public Declare Sub      CadRectGetCenter Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadRectPutCenter Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadRectGetWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadRectPutWidth Lib "vecad.dll" (ByVal hEnt As Long, ByVal Width As Double)
Public Declare Function CadRectGetHeight Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadRectPutHeight Lib "vecad.dll" (ByVal hEnt As Long, ByVal Height As Double)
Public Declare Function CadRectGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadRectPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadRectGetRadius Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadRectPutRadius Lib "vecad.dll" (ByVal hEnt As Long, ByVal Radius As Double)
Public Declare Function CadAddMline Lib "vecad.dll" (ByVal hDwg As Long, ByVal bClosed As Long) As Long
Public Declare Function CadMlineInsertVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Long
Public Declare Function CadMlineDeleteVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Long
Public Declare Function CadMlineGetNumVers Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadMlinePutNumVers Lib "vecad.dll" (ByVal hEnt As Long, ByVal nVers As Long)
Public Declare Sub      CadMlineGetVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadMlinePutVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadMlinePutZ1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Function CadMlineGetClosed Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadMlinePutClosed Lib "vecad.dll" (ByVal hEnt As Long, ByVal bClosed As Long)
Public Declare Sub      CadMlinePutScale Lib "vecad.dll" (ByVal hEnt As Long, ByVal Scal As Double)
Public Declare Function CadMlineGetScale Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadMlinePutJust Lib "vecad.dll" (ByVal hEnt As Long, ByVal Just As Long)
Public Declare Function CadMlineGetJust Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadMlineGetLength Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadMlineGetStyleID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadMlinePutStyleID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Function CadSetTextAlign Lib "vecad.dll" (ByVal hDwg As Long, ByVal Align As Long) As Long
Public Declare Function CadSetTextHeight Lib "vecad.dll" (ByVal hDwg As Long, ByVal Height As Double) As Double
Public Declare Function CadSetTextWidth Lib "vecad.dll" (ByVal hDwg As Long, ByVal Width As Double) As Double
Public Declare Function CadSetTextRotAngle Lib "vecad.dll" (ByVal hDwg As Long, ByVal Angle As Double) As Double
Public Declare Function CadSetTextOblique Lib "vecad.dll" (ByVal hDwg As Long, ByVal Angle As Double) As Double
Public Declare Function CadSetTextUpsideDown Lib "vecad.dll" (ByVal hDwg As Long, ByVal bUpDown As Long) As Long
Public Declare Function CadSetTextBackward Lib "vecad.dll" (ByVal hDwg As Long, ByVal bBack As Long) As Long
Public Declare Function CadAddText Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function CadAddText2 Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Align As Long, ByVal H As Double, ByVal W As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Long
Public Declare Function CadTextGetStyleID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadTextPutStyleID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Function CadTextGetX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutX Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadTextGetY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadTextGetZ Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Sub      CadTextGetPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadTextPutPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadTextGetLen Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadTextGetText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadTextPutText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Function CadTextGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadTextGetHeight Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutHeight Lib "vecad.dll" (ByVal hEnt As Long, ByVal Height As Double)
Public Declare Function CadTextGetWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutWidth Lib "vecad.dll" (ByVal hEnt As Long, ByVal Width As Double)
Public Declare Function CadTextGetOblique Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextPutOblique Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadTextGetAlign Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadTextPutAlign Lib "vecad.dll" (ByVal hEnt As Long, ByVal Align As Long)
Public Declare Function CadTextGetBackward Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadTextPutBackward Lib "vecad.dll" (ByVal hEnt As Long, ByVal bBackward As Long)
Public Declare Function CadTextGetUpsideDown Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadTextPutUpsideDown Lib "vecad.dll" (ByVal hEnt As Long, ByVal bUpsideDown As Long)
Public Declare Function CadTextGetBoxWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadTextGetPoint0 Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Function CadAddMText Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As String, ByVal RectWidth As Double, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Align As Long, ByVal RotAngle As Double) As Long
Public Declare Function CadMTextGetStyleID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadMTextPutStyleID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Sub      CadMTextGetPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadMTextPutPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadMTextGetLen Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadMTextGetText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadMTextPutText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Function CadMTextGetRectWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadMTextPutRectWidth Lib "vecad.dll" (ByVal hEnt As Long, ByVal RectWidth As Double)
Public Declare Function CadMTextGetAlign Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadMTextPutAlign Lib "vecad.dll" (ByVal hEnt As Long, ByVal Align As Long)
Public Declare Function CadMTextGetHeight Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadMTextPutHeight Lib "vecad.dll" (ByVal hEnt As Long, ByVal Height As Double)
Public Declare Function CadMTextGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadMTextPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadMTextGetWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadMTextPutWidth Lib "vecad.dll" (ByVal hEnt As Long, ByVal Width As Double)
Public Declare Function CadMTextGetLineSpace Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadMTextPutLineSpace Lib "vecad.dll" (ByVal hEnt As Long, ByVal LineSpace As Double)
Public Declare Function CadMTextGetAW Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadMTextGetAH Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadAddInsBlock Lib "vecad.dll" (ByVal hDwg As Long, ByVal idBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function CadAddInsBlockM Lib "vecad.dll" (ByVal hDwg As Long, ByVal idBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Scal As Double, ByVal Angle As Double, ByVal NumCols As Long, ByVal NumRows As Long, ByVal ColDist As Double, ByVal RowDist As Double) As Long
Public Declare Function CadInsBlockGetBlockID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadInsBlockPutBlockID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Function CadInsBlockGetX Lib "vecad.dll" (ByVal hEnt As Long) As Double
